# llama.cpp

cmake/: riscv64-toolchain.cmake
examples/: CMakeLists.txt
examples/simple-xsai/: CMakeLists.txt  simple-xsai-params.h  simple-xsai.cpp
ggml/: CMakeLists.txt
ggml/include/: xsai_alloc.h
ggml/src/: ggml.c
ggml/src/ggml-cpu/: CMakeLists.txt  ggml-cpu-impl.h  ggml-cpu.c  ggml-cpu.cpp  xsai_alloc.c
ggml/src/ggml-cpu/arch/riscv/ame/: ame-backend.cpp  ame-bf16-smoke.c  ame-helper.c  ame-matmul.c  ame.h  ame_gemm_tile_bf16_fp32_bT.c  ame_gemm_tile_i8_i32_bT.c
include/: llama.h
src/: llama-mmap.cpp  llama-model-loader.cpp  llama-model-loader.h  llama-model.cpp  llama-quant.cpp  llama.cpp
tests/: CMakeLists.txt  test-backend-ops.cpp
tools/llama-bench/: llama-bench.cpp
